--- a/package.json
+++ b/package.json
@@ -1,52 +1,58 @@
 {
-  "name": "food_shop",
-  "version": "1.0.0",
-  "description": "Backend for food economic ",
-  "main": "dist/app.js",
-  "scripts": {
-    "start": "ts-node ./src/app.ts",
-    "dev": "tsc -w & nodemon dist/app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/enviel97/BE_food_app.git"
-  },
-  "keywords": [
-    "flutter",
-    "keyword"
-  ],
-  "author": "Enviel",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/enviel97/BE_food_app/issues"
-  },
-  "homepage": "https://github.com/enviel97/BE_food_app#readme",
-  "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/config": "0.0.41",
-    "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "@types/express-fileupload": "^1.2.2",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/mongoose": "^5.11.97",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^17.0.33",
-    "@types/yup": "^0.29.13",
-    "nodemon": "^2.0.16",
-    "ts-node": "^10.7.0",
-    "typescript": "^4.6.4"
-  },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "config": "^3.3.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-fileupload": "^1.3.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.3",
-    "multer": "^1.4.4",
-    "yup": "^0.32.11"
-  }
+	"name": "food_shop",
+	"version": "1.0.0",
+	"description": "Backend for food economic ",
+	"main": "src/app.ts",
+	"scripts": {
+		"data": "ts-node ./data/injects.ts",
+		"start": "ts-node ./src/app.ts",
+		"test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'",
+		"build": "tsc",
+		"dev": "nodemon"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+ssh://git@github.com/enviel97/BE_food_app.git"
+	},
+	"keywords": [
+		"flutter",
+		"keyword"
+	],
+	"author": "Enviel",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/enviel97/BE_food_app/issues"
+	},
+	"homepage": "https://github.com/enviel97/BE_food_app#readme",
+	"devDependencies": {
+		"@types/bcryptjs": "^2.4.2",
+		"@types/chai": "^4.3.1",
+		"@types/config": "0.0.41",
+		"@types/dotenv": "^8.2.0",
+		"@types/express": "^4.17.13",
+		"@types/jsonwebtoken": "^8.5.8",
+		"@types/mocha": "^9.1.1",
+		"@types/mongoose": "^5.11.97",
+		"@types/node": "^17.0.33",
+		"@types/supertest": "^2.0.12",
+		"@types/yup": "^0.29.13",
+		"chai": "^4.3.6",
+		"mocha": "^10.0.0",
+		"nodemon": "^2.0.16",
+		"supertest": "^6.2.3",
+		"ts-loader": "^9.3.0",
+		"ts-node": "^10.7.0",
+		"tsconfig-paths-webpack-plugin": "^3.5.2",
+		"typescript": "^4.6.4"
+	},
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"chalk": "4.1.2",
+		"config": "^3.3.7",
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.3.3",
+		"yup": "^0.32.11"
+	}
 }
