--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
 	"compilerOptions": {
-		"target": "es2016",
+		"target": "es6",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": true,
 		"module": "commonjs",
+		"moduleResolution": "node",
 		"outDir": "./dist",
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
+		"removeComments": true,
 		"strict": true,
-		"skipLibCheck": true
+		"strictPropertyInitialization": false,
+		"esModuleInterop": true,
+		"resolveJsonModule": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true
 	},
-	"include": ["src/**/*"]
+	"include": ["src"],
+	"exclude": ["test", ".vscode", "node_modules", "dist"]
 }
