--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Backend for food economic ",
 	"main": "src/app.ts",
 	"scripts": {
-		"data": "nodemon -w \"./data/*\" --ext \"ts,json\" --exec \"ts-node ./data/injects.ts\"",
+		"data": "ts-node ./data/injects.ts",
 		"start": "ts-node ./src/app.ts",
 		"test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'",
 		"build": "tsc",
@@ -27,9 +27,11 @@
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
 		"@types/chai": "^4.3.1",
+		"@types/cli-progress": "^3.11.0",
 		"@types/config": "0.0.41",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.13",
+		"@types/faker": "5.5.9",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/mocha": "^9.1.1",
 		"@types/mongoose": "^5.11.97",
@@ -47,9 +49,11 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"chalk": "4.1.2",
+		"cli-progress": "^3.11.1",
 		"config": "^3.3.7",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"faker": "5.5.3",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.3",
 		"yup": "^0.32.11"
