--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es6",
-		"lib": ["dom", "dom.iterable", "esnext"],
+		"lib": ["dom", "dom.iterable", "esnext", "ES2015", "ES2016"],
 		"allowJs": true,
 		"module": "commonjs",
 		"moduleResolution": "node",
@@ -14,6 +14,6 @@
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true
 	},
-	"include": ["src"],
+	"include": ["./src/**/*.ts"],
 	"exclude": ["test", ".vscode", "node_modules", "dist"]
 }
