--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
 	"main": "src/app.ts",
 	"scripts": {
 		"data": "ts-node ./data/injects.ts",
-		"start": "ts-node ./src/app.ts",
-		"heroku": "node ./dist/app.js",
+		"start-ts": "ts-node ./src/app.ts",
+		"start": "node ./dist/app.js",
 		"test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'test/**/*.ts'",
 		"build": "tsc",
 		"dev": "nodemon"
