--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.13",
 		"@types/faker": "5.5.9",
+		"@types/gridfs-stream": "^0.5.36",
 		"@types/jsonwebtoken": "^8.5.8",
 		"@types/mocha": "^9.1.1",
 		"@types/mongoose": "^5.11.97",
+		"@types/multer": "^1.4.7",
+		"@types/multer-gridfs-storage": "^4.0.5",
 		"@types/node": "^17.0.33",
 		"@types/supertest": "^2.0.12",
 		"@types/yup": "^0.29.13",
@@ -55,8 +58,11 @@
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
 		"faker": "5.5.3",
+		"gridfs-stream": "^1.1.1",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.3.3",
+		"multer": "^1.4.4",
+		"multer-gridfs-storage": "^5.0.2",
 		"yup": "^0.32.11"
 	}
 }
